tests/fixtures/status_basic.stderr
Error in tests/fixtures/status_basic.sh2:2:3
