tests/fixtures/status_basic.sh2
func main() {
  run("sh", "-c", "exit 7")
  print(status())
}
